--- a/starfield.ipynb
+++ b/starfield.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
     "YELLOW = (0, 255, 255)\n",
     "\n",
     "# Velocidad del juego\n",
-    "FPS = 30\n"
+    "FPS = 24\n"
    ]
   },
   {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
     "        self.y = random.randrange(0, HEIGHT)\n",
     "        \n",
     "    def left(self):\n",
-    "        self.x = self.x + 1\n",
+    "        self.x = self.x - 1\n",
     "        \n",
     "    def right(self):\n",
     "        self.x = self.x + 1\n",
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
     "        ## define el color, al azar, aquí\n",
     "        \n",
     "    def left(self):\n",
-    "        self.x = self.x + 1\n",
+    "        self.x = self.x - 1\n",
     "        \n",
     "    def right(self):\n",
     "        self.x = self.x + 1\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
     "            )\n",
     "        \n",
     "    def left(self):\n",
-    "        self.x = self.x + 1\n",
+    "        self.x = self.x - 1\n",
     "        \n",
     "    def right(self):\n",
     "        self.x = self.x + 1\n",
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,10 +485,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Primero, veamos un poco más de los enventos, que ahora mismo solo estamnos tratando los\n",
     "eventos de salida. Vamos a hacer un programa pygame que nos muestre todos los eventos\n",
@@ -497,16 +495,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Salimos\n"
+     ]
+    }
+   ],
    "source": [
     "pygame.init()\n",
     "try:\n",
     "    pygame.display.set_caption(\"Eventos\")\n",
     "    screen = pygame.display.set_mode(SIZE, 0, 24)\n",
     "    # Parte de inicialización del juego\n",
-    "    font = pygame.font.Font('Hack-Regular.ttf', 18)\n",
+    "    font = pygame.font.Font('./Hack-Regular.ttf', 18)\n",
     "    lista_eventos = []\n",
     "    clock = pygame.time.Clock()    \n",
     "    in_game = True  # Indicador lógico para saber cuando debemos terminar el juego\n",
@@ -516,17 +522,334 @@
     "            lista_eventos.append(str(event))\n",
     "            if event.type == pygame.QUIT:\n",
     "                in_game = False\n",
+    "        if len(lista_eventos) > 35:\n",
+    "            lista_eventos = lista_eventos[-35:]\n",
     "        screen.fill(BLACK)\n",
     "        line = 0\n",
     "        for texto in lista_eventos:\n",
-    "            s = font.render(texto, True, WHITE, BLACK)\n",
+    "            s = font.render(texto, True, GREEN, BLACK)\n",
     "            pos = (12, line*20)\n",
     "            screen.blit(s, pos)\n",
     "            line += 1\n",
     "        pygame.display.update()\n",
     "        clock.tick(FPS)\n",
+    "except Exception as err:\n",
+    "    print(err)\n",
     "finally:\n",
+    "    print('Salimos')\n",
     "    pygame.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "He añadido una cláusula except. Esta se ejecutará cuando se detecte un tipo de\n",
+    "excepción. Si usamos `Exception`, le indicamos que cualquier error (Una práctica nada\n",
+    "recomendable)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Los eventos que nos llegan al programa son objetos de tipo evento, pero\n",
+    "hay varias clases, cada una con sus atributos y métodos correspondientes.\n",
+    "Por ejemplo, los eventos de tipo movimiento del raton incluyen, entre\n",
+    "otros datos, las coordenadas x y y del raton. Los eventos del tipo teclado, sin\n",
+    "embargo, incluyen el caracter que hemos pulsado en el teclado.\n",
+    "\n",
+    "Lo único que tienen en comun todos los eventos es el atributo `type`. En el\n",
+    "código actual solo miramos que haya llegado un evento de tipo `pygame.QUIT`, que nos\n",
+    "indica que el sistema operativo quiere cerrar el programa. Pero hay muchos tipos\n",
+    "de eventos:\n",
+    "    \n",
+    "- QUIT\n",
+    "- ACTIVEEVENT\n",
+    "- KEYDOWN\n",
+    "- KEYUP\n",
+    "- MOUSEMOTION\n",
+    "- MOUSEBUTTONUP\n",
+    "- MOUSEBUTTONDOWN\n",
+    "- JOYAXISMOTION\n",
+    "- JOYBALLMOTION\n",
+    "- JOYHATMOTION\n",
+    "- JOYBUTTONUP\n",
+    "- JOYBUTTONDOWN\n",
+    "- VIDEORESIZE\n",
+    "- VIDEOEXPOSE\n",
+    "- USEREVENT\n",
+    "\n",
+    "De todos estos, nos interesan especialmente los de teclado (`KEYDOWN`, `KEYUP`) y los del ratón (`MOUSEMOTION`, `MOUSEBUTTONUP` y `MOUSEBUTTONDOWN`). Para los eventos\n",
+    "de teclado y los que están asociados a los botones del ratón, vemos que hay dos eventos\n",
+    "en realidad, uno cuando se pulsa el boton y otro cuando la tecla deja de ser pulsada.\n",
+    "\n",
+    "Pos ahora, nos interesan los eventos del teclado. Vamos a intentar que el campo\n",
+    "de estrellas se pueda mover usando las teclas `A`, `W`, `S` y `D`:\n",
+    "\n",
+    "Como primer paso, vamos simplemente a detectar cada una de estas cuatro teclas, filtrando\n",
+    "los eventos que nos interesen:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pygame\n",
+    "import random\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tamaño de pantalla\n",
+    "\n",
+    "SIZE = WIDTH, HEIGHT = 800, 640\n",
+    "\n",
+    "# Colores\n",
+    "BLACK = (0, 0, 0)\n",
+    "WHITE = (255, 255, 255)\n",
+    "RED = (255, 0, 0)\n",
+    "GREEN = (0, 255, 0)\n",
+    "BLUE = (0, 0, 255)\n",
+    "YELLOW = (0, 255, 255)\n",
+    "\n",
+    "# Velocidad del juego\n",
+    "FPS = 30\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pulsada una de las teclas que nos interesa\n",
+      "<Event(2-KeyDown {'key': 119, 'scancode': 25, 'mod': 0, 'unicode': 'w'})>\n",
+      "Pulsada una de las teclas que nos interesa\n",
+      "<Event(2-KeyDown {'key': 100, 'scancode': 40, 'mod': 0, 'unicode': 'd'})>\n",
+      "Pulsada una de las teclas que nos interesa\n",
+      "<Event(2-KeyDown {'key': 115, 'scancode': 39, 'mod': 0, 'unicode': 's'})>\n",
+      "Pulsada una de las teclas que nos interesa\n",
+      "<Event(2-KeyDown {'key': 97, 'scancode': 38, 'mod': 0, 'unicode': 'a'})>\n",
+      "Salimos\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "pygame.init()\n",
+    "try:\n",
+    "    pygame.display.set_caption(\"Eventos\")\n",
+    "    screen = pygame.display.set_mode(SIZE, 0, 24)\n",
+    "    # Parte de inicialización del juego\n",
+    "    clock = pygame.time.Clock()    \n",
+    "    font = pygame.font.Font('./Hack-Regular.ttf', 18)\n",
+    "    lista_eventos =  []\n",
+    "    in_game = True  # Indicador lógico para saber cuando debemos terminar el juego\n",
+    "    while in_game:\n",
+    "    # Obtener datos de entrada\n",
+    "        for event in pygame.event.get():\n",
+    "            \n",
+    "            if event.type == pygame.QUIT:\n",
+    "                in_game = False\n",
+    "            if event.type == pygame.KEYDOWN:\n",
+    "                if event.key == pygame.K_ESCAPE:\n",
+    "                    in_game = False\n",
+    "                elif event.key in (pygame.K_a, pygame.K_w, pygame.K_s, pygame.K_d):\n",
+    "                    print('Pulsada una de las teclas que nos interesa')\n",
+    "                    print(event)\n",
+    "                    lista_eventos.append(str(event))\n",
+    "                \n",
+    "        if len(lista_eventos) > 35:\n",
+    "            lista_eventos = lista_eventos[-35:]\n",
+    "        screen.fill(BLACK)\n",
+    "        line = 0\n",
+    "        for texto in lista_eventos:\n",
+    "            s = font.render(texto, True, GREEN, BLACK)\n",
+    "            pos = (12, line*20)\n",
+    "            screen.blit(s, pos)\n",
+    "            line += 1\n",
+    "        pygame.display.update()\n",
+    "        clock.tick(FPS)\n",
+    "except Exception as err:\n",
+    "    print(err)\n",
+    "finally:\n",
+    "    print('Salimos')\n",
+    "    pygame.quit()\n",
+    "    print('OK')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora, lo que nos interesa es que, en el método update de la estrella, sepa\n",
+    "en que direccion debe moverse. Para eso, vamos a crear una variable global con\n",
+    "5 posibles valores, que serian: Parado, hacia la izquierda, hacia la derecha, \n",
+    "hacia arriba y hacia abajo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "STOP = 0\n",
+    "LEFT = 1\n",
+    "RIGHT = 2\n",
+    "UP = 3\n",
+    "DOWN = 4\n",
+    "STATUS = STOP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Redefinimos `Star` para que cuando se actualize cada estrella (método `update`)\n",
+    "tenga en cuenta el sentido del movimiento:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Star:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.x = random.randrange(0, WIDTH)\n",
+    "        self.y = random.randrange(0, HEIGHT)\n",
+    "        self.color = (\n",
+    "            random.randrange(128, 255),\n",
+    "            random.randrange(128, 255),\n",
+    "            random.randrange(128, 255),\n",
+    "            )\n",
+    "        self.speed = random.randrange(1, 5)\n",
+    "        self.size = random.randrange(1, 3)\n",
+    "        \n",
+    "    def left(self):\n",
+    "        self.x = self.x - self.speed\n",
+    "        \n",
+    "    def right(self):\n",
+    "        self.x = self.x + self.speed\n",
+    "\n",
+    "    def up(self):\n",
+    "        self.y = self.y - self.speed\n",
+    "        \n",
+    "    def down(self):\n",
+    "        self.y = self.y + self.speed\n",
+    "        \n",
+    "    def update(self):\n",
+    "        global STATUS\n",
+    "        if STATUS == LEFT:\n",
+    "            self.left()\n",
+    "        elif STATUS == RIGHT:\n",
+    "            self.right()\n",
+    "        elif STATUS == UP:\n",
+    "            self.up()\n",
+    "        elif STATUS == DOWN:\n",
+    "            self.down()\n",
+    "        \n",
+    "    def draw(self, surface):\n",
+    "        pygame.draw.circle(surface, self.color, (self.x, self.y), self.size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora ponemos la variable STATUS al valor correspondiente para cada tecla:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Salimos\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "pygame.init()\n",
+    "try:\n",
+    "    pygame.display.set_caption(\"Eventos\")\n",
+    "    screen = pygame.display.set_mode(SIZE, 0, 24)\n",
+    "    # Parte de inicialización del juego\n",
+    "    STATUS = STOP\n",
+    "    clock = pygame.time.Clock()    \n",
+    "    stars =  [Star() for _ in range(75)]\n",
+    "    in_game = True  # Indicador lógico para saber cuando debemos terminar el juego\n",
+    "    while in_game:\n",
+    "    # Obtener datos de entrada\n",
+    "        for event in pygame.event.get():\n",
+    "            if event.type == pygame.QUIT:\n",
+    "                in_game = False\n",
+    "            if event.type == pygame.KEYDOWN:\n",
+    "                if event.key == pygame.K_ESCAPE:\n",
+    "                    in_game = False\n",
+    "                elif event.key == pygame.K_a:\n",
+    "                    STATUS = LEFT\n",
+    "                elif event.key == pygame.K_d:\n",
+    "                    STATUS = RIGHT\n",
+    "                elif event.key == pygame.K_w:\n",
+    "                    STATUS = UP\n",
+    "                elif event.key == pygame.K_s:\n",
+    "                    STATUS = DOWN\n",
+    "                elif event.key == pygame.K_SPACE:\n",
+    "                    STATUS = STOP\n",
+    "        for star in stars:\n",
+    "            star.update()\n",
+    "        screen.fill(BLACK)\n",
+    "        for star in stars:\n",
+    "            star.draw(screen)\n",
+    "        pygame.display.update()\n",
+    "        clock.tick(FPS)\n",
+    "except Exception as err:\n",
+    "    print(err)\n",
+    "finally:\n",
+    "    print('Salimos')\n",
+    "    pygame.quit()\n",
+    "    print('OK')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pygame' has no attribute 'K_Space'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-47-5bb3c8b1f48b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mK_Space\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pygame' has no attribute 'K_Space'"
+     ]
+    }
+   ],
+   "source": [
+    "pygame.K_SPACE"
    ]
   },
   {
