--- a/starfield.ipynb
+++ b/starfield.ipynb
@@ -49,7 +49,9 @@
     "RED = (255, 0, 0)\n",
     "GREEN = (0, 255, 0)\n",
     "BLUE = (0, 0, 255)\n",
-    "YELLOW = (0, 255, 255)\n",
+    "CYAN = (0, 255, 255)\n",
+    "MAGENTA = (255, 0, 255)\n",
+    "YELLOW = (255, 255, 0)\n",
     "\n",
     "# Velocidad del juego\n",
     "FPS = 24\n"
