--- a/pong.ipynb
+++ b/pong.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,10 +46,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Primeros pasos"
    ]
@@ -63,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +172,7 @@
        "(100, 125)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,15 +188,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Según el caso puede ser mñas conveniente usar un sistema o el otro. \n",
-    "Para el caso de la palota, dibujamos un rectángulo con la esquina superior izquierda deplazada\n",
-    "5 pixels a la derecha y hacia arriba, y luego indicamos un ancho y alto de 11 pixels, lo que\n",
-    "nos da un rectangulo de 11x11 pixels, donde la coordenadas x y y apuntan justo al centro del mismo."
+    "Según el caso puede ser más conveniente un sistema o el otro. \n",
+    "Para el caso de la palota, dibujamos un rectángulo con la esquina superior izquierda deplazada $5$ pixels a la derecha y hacia arriba, y luego indicamos un ancho y alto de 11 pixels, lo que\n",
+    "nos da un rectangulo de $11\\times 11$ pixels, donde la coordenadas x y y apuntan justo al centro del mismo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,22 +310,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Además dmel constructor, con su nombre _mágico_ especial, `__init__`, hemos definido un \n",
-    "nuevo método `magico`, en este caso llamado `__str__`. Este mñétodo será llamada cada\n",
-    "vez que sea necesario convertir un objeto de la clase `Vector2` a una string, por ejemplo, \n",
+    "Además del constructor, con su nombre _mágico_ especial, `__init__`, hemos definido un \n",
+    "nuevo método màgico, en este caso llamado `__str__`. Este método será llamada cada\n",
+    "vez que sea necesario convertir un objeto de la clase a una cadena de texto, por ejemplo, \n",
     "para imprimirlo con la función `print`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vector2(3, 4)\n"
+      "Vector2(3.000, 4.000000)\n"
      ]
     }
    ],
@@ -363,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -446,10 +443,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 76,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Vectores unitarios"
    ]
@@ -585,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
